# Estrutura-de-dados-em-C

./: README.md
Aulas-testes/: ponteiros.c  questao1.c  testeide.c
EDA-CLion/: CMakeLists.txt  arvore-binaria.c  main.c  quicksort.c
EDA-CLion/Exercicios/: questao1-pilhas.c
EDA-CLion/Filas/: fila.c
EDA-CLion/Heap binary tree/: Heap array.c
EDA-CLion/Listas/: listas.c
EDA-CLion/Pilhas/: pilha.c
EDA-CLion/deques/: deque.c  exercicio1-deque.c
